@@ -1189,4 +1189,14 @@ Check that the server is running, the database exists and the user Error establi
   <data name="UnableToParseScript" xml:space="preserve">
     <value>Unable to parse SQL script. See below for additional details: {0}</value>
   </data>
+  <data name="ConnectionNotOpenError" xml:space="preserve">
+    <value>Error establishing the database connection. Validate that the connection is open.</value>
+  </data>
+  <data name="ConnectionOpeningError" xml:space="preserve">
+    <value>Error establishing the database connection.
+Check that the server is running, the database exists, and the user credentials are valid.</value>
+  </data>
+  <data name="ErrorMessageTitle" xml:space="preserve">
+    <value>Error</value>
+  </data>
 </root>
